:sparkles: Nav drawer (content)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div id="menu-global">
+</div>
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+    <app-menu-global></app-menu-global>
+    <ion-router-outlet></ion-router-outlet>
 </ion-app>
