--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,7 +4,7 @@
       <ion-icon name="home"></ion-icon>
       <ion-label>Accueil</ion-label>
     </ion-tab-button>
-    <ion-tab-button>
+    <ion-tab-button tab="search">
       <ion-icon name="search"></ion-icon>
       <ion-label>Rechercher</ion-label>
     </ion-tab-button>
