:sparkles: Détail article

--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content>
-  <!-- RESULTATS -->
+  <!-- RÉSULTATS -->
   <search-results
     *ngIf="view === 'results'"
     [results]="transmissionData"
