:sparkles: Nouveau produit

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
       <ion-icon name="search"></ion-icon>
       <ion-label>Rechercher</ion-label>
     </ion-tab-button>
-    <ion-tab-button>
+    <ion-tab-button tab="new">
       <ion-icon name="add"></ion-icon>
       <ion-label>Ajouter</ion-label>
     </ion-tab-button>
