--- a/src/app/home/content/content.component.html
+++ b/src/app/home/content/content.component.html
@@ -1,21 +1,15 @@
 <ion-grid fixed>
-  <ion-row>
+  <ion-row class="ion-margin-start">
     <ion-col>
       <h1>Tableau de bord</h1>
     </ion-col>
   </ion-row>
 
-  <ion-row>
-    <ion-col>
-      <home-articles-total></home-articles-total>
-    </ion-col>
-  </ion-row>
-
-  <ion-row>
+  <!-- <ion-row>
     <ion-col>
       <home-article-recent></home-article-recent>
     </ion-col>
-  </ion-row>
+  </ion-row> -->
 
   <ion-row>
     <ion-col>
