--- a/src/app/utils/number-picker/number-picker.component.scss
+++ b/src/app/utils/number-picker/number-picker.component.scss
@@ -14,7 +14,7 @@ ion-row {
 
     div {
       background: #cecece85;
-      width: 75%;
+      width: 55px;
       height: 50px;
       font-size: x-large;
       font-weight: 500;
