:tada: Finalisation menu

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
     <ion-title> Accueil </ion-title>
 
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button (click)="goToSearch()">
         <ion-icon slot="icon-only" name="search"></ion-icon>
       </ion-button>
     </ion-buttons>
