--- a/src/app/utils/number-picker/number-picker.component.html
+++ b/src/app/utils/number-picker/number-picker.component.html
@@ -8,10 +8,13 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid fixed class="ion-text-center">
+  <ion-grid fixed class="ion-text-center ion-margin-top">
     <!-- AUGMENTER -->
     <ion-row>
-      <ion-col [size]="colSize" *ngFor="let _ of [].constructor(maxNbOfDigits); index as i">
+      <ion-col
+        [size]="colSize"
+        *ngFor="let _ of [].constructor(maxNbOfDigits); index as i"
+      >
         <ion-button (click)="increaseDigit(i)">
           <ion-icon slot="icon-only" name="chevron-up"></ion-icon>
         </ion-button>
@@ -20,14 +23,20 @@
 
     <!-- NOMBRE -->
     <ion-row class="numbers">
-      <ion-col [size]="colSize" *ngFor="let _ of [].constructor(maxNbOfDigits); index as i">
-        <div>{{ digits[i] }}</div>
+      <ion-col
+        [size]="colSize"
+        *ngFor="let _ of [].constructor(maxNbOfDigits); index as i"
+      >
+        <ion-label color="dark">{{ digits[i] }}</ion-label>
       </ion-col>
     </ion-row>
 
     <!-- BAISSER -->
     <ion-row>
-      <ion-col [size]="colSize" *ngFor="let _ of [].constructor(maxNbOfDigits); index as i">
+      <ion-col
+        [size]="colSize"
+        *ngFor="let _ of [].constructor(maxNbOfDigits); index as i"
+      >
         <ion-button (click)="decreaseDigit(i)">
           <ion-icon slot="icon-only" name="chevron-down"></ion-icon>
         </ion-button>
