--- a/src/app/detail-produit/form/form.component.html
+++ b/src/app/detail-produit/form/form.component.html
@@ -6,7 +6,7 @@
           {{ selectedProduct.product_code }}
         </h1></ion-col
       >
-      <ion-col size="6">
+      <ion-col size="6" class="ion-text-right">
         <ion-button [disabled]="productForm.invalid" (click)="onSubmit()">
           <ion-icon slot="start" name="save"></ion-icon>
           Sauvegarder
