--- a/src/app/categories/liste/liste.component.scss
+++ b/src/app/categories/liste/liste.component.scss
@@ -4,3 +4,35 @@ ion-card-content {
     font-weight: bold;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .custom-menu {
+    ion-item:hover {
+      filter: brightness(1.5) !important;
+    }
+  }
+}
+
+.custom-menu {
+  position: absolute;
+  box-shadow: 3px 2px 5px 1px rgba(0, 0, 0, 0.2);
+  transition: transform .5s, opacity .5s;
+  transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  border-radius: 5px;
+  min-width: 220px;
+  transform-origin: top left;
+  transform: scale(0);
+  opacity: 0;
+
+  &.show {
+    transform: scale(1);
+    opacity: 1;
+    ion-item {
+      cursor: pointer;
+    }
+  }
+
+  ion-item:hover {
+    filter: brightness(.9);
+  }
+}
