--- a/src/app/liste-produits/liste-produits.page.html
+++ b/src/app/liste-produits/liste-produits.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/categories"></ion-back-button>
+    </ion-buttons>
     <ion-title>{{ nomCategorie }}</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -8,7 +11,7 @@
   <ion-grid fixed>
     <ion-row class="ion-padding-horizontal">
       <ion-col>
-        <h1>Résultat de la recherche</h1>
+        <h1>Produits pour {{ nomCategorie }}</h1>
       </ion-col>
     </ion-row>
 
