--- a/src/app/search/form/form.component.html
+++ b/src/app/search/form/form.component.html
@@ -52,3 +52,9 @@
     </ion-col>
   </ion-row>
 </ion-grid>
+
+<ion-fab vertical="bottom" horizontal="center" slot="fixed" edge="true">
+  <ion-fab-button (click)="toggleShutter()" class="ion-align-items-start">
+    <ion-icon name="menu"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
