regler pb recherche code/nom

--- a/src/app/search/form/form.component.html
+++ b/src/app/search/form/form.component.html
@@ -1,14 +1,14 @@
 <ion-grid fixed>
   <!-- SEGMENTS par code/par nom -->
   <ion-segment
-    value="code"
+    value="name"
     (ionChange)="segmentChanged($event)"
     class="ion-padding"
   >
-    <ion-segment-button value="code">
+    <ion-segment-button value="name">
       <ion-label>Par nom</ion-label>
     </ion-segment-button>
-    <ion-segment-button value="name">
+    <ion-segment-button value="code">
       <ion-label>Par code</ion-label>
     </ion-segment-button>
   </ion-segment>
