opti code + TSDoc

--- a/src/app/search/form/form.component.html
+++ b/src/app/search/form/form.component.html
@@ -54,7 +54,7 @@
 </ion-grid>
 
 <ion-fab vertical="bottom" horizontal="center" slot="fixed" edge="true">
-  <ion-fab-button (click)="toggleShutter()" class="ion-align-items-start">
+  <ion-fab-button (click)="shutter.emit()" class="ion-align-items-start">
     <ion-icon name="menu"></ion-icon>
   </ion-fab-button>
 </ion-fab>
