--- a/src/app/categories/liste/liste.component.scss
+++ b/src/app/categories/liste/liste.component.scss
@@ -5,14 +5,7 @@ ion-card-content {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .custom-menu {
-    ion-item:hover {
-      filter: brightness(1.5) !important;
-    }
-  }
-}
-
+/* Stylisation du menu contextuel personnalisé */
 .custom-menu {
   position: absolute;
   box-shadow: 3px 2px 5px 1px rgba(0, 0, 0, 0.2);
@@ -24,6 +17,7 @@ ion-card-content {
   transform: scale(0);
   opacity: 0;
 
+  /* Lorsque la classe "show" est appliquée, afficher le menu */
   &.show {
     transform: scale(1);
     opacity: 1;
@@ -32,7 +26,18 @@ ion-card-content {
     }
   }
 
+  /* Légère réduction de luminosité au survol */
   ion-item:hover {
     filter: brightness(.9);
+  }
+}
+
+/* Stylisation pour le mode sombre */
+@media (prefers-color-scheme: dark) {
+  /* Lorsqu'on survole un ion-item dans le menu, augmenter la luminosité */
+  .custom-menu {
+    ion-item:hover {
+      filter: brightness(1.5) !important;
+    }
   }
 }
